# VK

./: .env.example  .gitignore  README.md  TZ_VK_SaaS_for_Entrepreneurs.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ebc143dc9ec_initial_schema.py  89f2a66f5a0c_agent_conversations_subscriber_id_.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: agents.py  auth.py  billing.py  chat.py  communities.py  health.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  ai_agent.py  base.py  billing.py  bot_flow.py  community.py  content_post.py  mailing.py  subscriber.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  billing.py  common.py  community.py
backend/app/services/: __init__.py  agent_service.py  billing_service.py  user_service.py
backend/app/services/llm/: __init__.py  anthropic_client.py  base.py  embeddings.py  images.py  openai_client.py
backend/app/services/rag/: __init__.py  chunker.py  generator.py  indexer.py  parsers.py  qdrant_service.py  retriever.py
backend/app/workers/: celery_app.py
backend/tests/: test_health.py  test_security.py
miniapp/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
miniapp/src/: App.tsx  main.tsx  vite-env.d.ts
miniapp/src/api/: client.ts
miniapp/src/lib/: vkBridge.ts
miniapp/src/panels/: AgentDetail.tsx  AgentsList.tsx  Billing.tsx  Communities.tsx  Dashboard.tsx
miniapp/src/store/: auth.ts
